--- a/style.css
+++ b/style.css
@@ -5,7 +5,10 @@ body {
   color: #003049;
   font-family: "Source Sans Pro", Tahoma, Geneva, Verdana, sans-serif;
   padding: 40px;
+  background-color: #f0f0f0;
+  
 }
+
 
 /* Set the font family for any h1, h2, or h3 heading */
 h1,
