--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   color: #003049;
   font-family: "Source Sans Pro", Tahoma, Geneva, Verdana, sans-serif;
   padding: 40px;
-  background-color: #FOE68C;
+  background-color: #C4A484;
   
 }
 
