--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ body {
   color: #003049;
   font-family: "Source Sans Pro", Tahoma, Geneva, Verdana, sans-serif;
   padding: 40px;
-  background-color: #C4A484;
+  background-color: #eee8aa;
+  width:640px; margin:auto
   
 }
 
