--- a/style.css
+++ b/style.css
@@ -6,8 +6,12 @@ body {
   font-family: "Source Sans Pro", Tahoma, Geneva, Verdana, sans-serif;
   padding: 40px;
   background-color: #eee8aa;
-  width:640px; margin:auto
   
+  
+}
+body{
+  width: 640px;
+  margin:auto;
 }
 
 
