--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@ body {
     text-align: center;
   
 }
+.contact-items {
+  text-align: left;
+}
 
 
 /* Set the font family for any h1, h2, or h3 heading */
