--- a/style.css
+++ b/style.css
@@ -78,6 +78,13 @@ hr {
 /* Add your solution below */
 
 .image-circle { border-radius: 50%;
+               display: block;
+               margin: 0 auto;
+               width: 100%;
+               max-width: 200px;
+  height: auto;
+              
+               
               
                
               
