--- a/style.css
+++ b/style.css
@@ -4,8 +4,11 @@
 body {
   color: #003049;
   font-family: "Source Sans Pro", Tahoma, Geneva, Verdana, sans-serif;
-  padding: 20px;
+  padding: 40px;
+  display: flex;
+  justify-content: center;
   background-color: #eae2b7;
+  
   
   
 }
