--- a/style.css
+++ b/style.css
@@ -9,6 +9,13 @@ body {
   justify-content: center;
   background-color: #eae2b7;
 }
+}
+a:link {
+  color: #d62828;
+}
+a:hover {
+  color: #f77f00;
+}
   
   
   
