--- a/style.css
+++ b/style.css
@@ -45,7 +45,10 @@ nav a {
   color: red; /* Change #ff5733 to your desired color */
 }
 a:link {
-  color: #f77f00;
+  color: #d62828;
+}
+a:hover {
+  color: #f77f00
 }
   
 
