--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ body {
   color: #003049;
   font-family: "Source Sans Pro", Tahoma, Geneva, Verdana, sans-serif;
   padding: 40px;
+  background-color: #eae2b7;
+}
+body {
+  content:center-align;
 }
 
 /* Set the font family for any h1, h2, or h3 heading */
