--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ body {
   color: #003049;
   font-family: "Source Sans Pro", Tahoma, Geneva, Verdana, sans-serif;
   padding: 40px;
+}
+body {
   background-color: #eae2b7;
 }
 body {
