--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@ body {
 body {
   text-align: center;
 }
+.content {
+  text-align: center;
+}
 
 /* Set the font family for any h1, h2, or h3 heading */
 h1,
