--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ hr {
 .image-circle {
   border-radius: 50%;
    margin-top: 0px;
-  border: 5px solid #003049
+  border: 5px
                
 }
 footer {
