--- a/style.css
+++ b/style.css
@@ -65,8 +65,8 @@ hr {
 
 .image-circle {
   border-radius: 50%;
-   margin-top: 0px;
-  border: 5px
+   diplay: block;
+  margin: 0 auto;
                
 }
 footer {
