--- a/style.css
+++ b/style.css
@@ -62,6 +62,11 @@ hr {
 }
 
 /* Add your solution below */
+img {
+  width: 100%;
+  max-width: 200px;
+  height: auto;
+}
 
 .image-circle {
   border-radius: 50%;
