--- a/style.css
+++ b/style.css
@@ -9,11 +9,10 @@ body {
 body {
   background-color: #eae2b7;
 }
-body {
+header, .content {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  align-items: center; 
 }
 
 
