--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ h2,
 h3 {
   font-family: "Playfair Display", Times, serif;
 }
-h1, h2, h3, .image-circle {
+h1, h2, h3, .image-circle, .abstract-red, .spiral-zany, .melted-rainbow {
   margin: 10px 0;
   text-align: center;
   align-items: center;
