--- a/style.css
+++ b/style.css
@@ -74,12 +74,14 @@ img {
 
 .image-circle {
   border-radius: 50%;
+   margin-top: 0px;
   border: 2px solid #003049;
    diplay: block;
   margin: auto;
   
                
 }
+
 
   
   
