--- a/style.css
+++ b/style.css
@@ -20,6 +20,12 @@ nav a {
 nav a:hover {
   color: #f77f00;
 }
+.contact-link {
+  color: red;
+}
+.contact-link:hover {
+  color: #f77f00; 
+}
 
 
 /* Set the font family for any h1, h2, or h3 heading */
