--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
+}
 
   nav a {
  color: #d62828;
@@ -69,7 +70,7 @@ div {
 
 
 hr {
-  width: 20%;
+  width: 40%;
   margin: 10px auto;
   border: 2px solid black;
 }
