--- a/style.css
+++ b/style.css
@@ -4,66 +4,63 @@
 body {
   color: #003049;
   font-family: "Source Sans Pro", Tahoma, Geneva, Verdana, sans-serif;
-  padding: 40px;
+  padding: 10px;
 }
 body {
   background-color: #eae2b7;
+  inset:50%;
 }
- .content {
+
+
+
+
+.container {
   display: flex;
-  flex-direction: column;
-  align-items: center; 
+  justify-content: center;
+  align-items: center;
 }
-
-
-
-
 /* Set the font family for any h1, h2, or h3 heading */
 h1,
 h2,
 h3 {
   font-family: "Playfair Display", Times, serif;
+}
+h1 {
   text-align: center;
 }
+h2 {
+  text-align: center;
+} 
+h3 {
+  text-align: right;
+}
+h3.class-item {
+  text-align: center;
+}
+nav {
 
+  display: flex;
+  justify-content: right;
+  align-items: right;
+  gap: 20px;
 
-
-nav a: {
-  
-  align-text: center;
 }
 nav a {
-margin: 0 20px;
-color:red;
+  color: red; /* Change #ff5733 to your desired color */
 }
-nav a:hover {
-color: #f77f00;
-}
-.contact-link, 
-article a {
+a:link {
   color: red;
 }
-.contact-link:hover,
-article a:hover {
-  color: #f77f00;
-}
-.social-links a {
-  color: red;
-}
-.social-links a:hover {
-  color: #f77f00;
-}
-  .inline-link {
-  color: red;
-  }
-.inline-link:hover {
-  color: #f77f00;
-}
+
 
 article {
   padding: 20px 0;
 }
 
+article div {
+  text-align: center;
+  width: 100%;
+}
 
 p {
   line-height: 1.5;
@@ -75,37 +72,88 @@ div {
   width: 600px;
 }
 
-
-
-hr {
-  width: 40%;
-  margin: 20px auto;
-  
-  border: 1px solid black;
-}
-
-/* Add your solution below */
 img {
   width: 100%;
   max-width: 200px;
   height: auto;
 }
 
+hr {
+  border: 1px solid black;
+}
+
+/* Add your solution below */
+
+.image-circle { border-radius: 50%;
+               width:175px;
+               height:175px;
+                
+
+
+}
 .image-circle {
-  border-radius: 50%;
-   margin-top: 20px;
-  border: 2px solid #003049;
-   diplay: block;
-  margin: auto;
-  
-               
+  float: left;
+  align: left: 200px;
+}
+.image-circle {
+  outline-style:solid;
+  outline-width: 2px;
+  margin-right: 30%;
+  margin-bottom: 10px;
 }
 
 
-  
-  
+} 
+
 footer {
   text-align: center;
+
+}
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between
+}
+
+.logo {
+  margin-center: 10px; /* add some space between logo and nav */
+}
+
+nav {
+  /* add styles for the nav links here */
+}
+header {
+  display: flex;
+  gap: 0px; /* reduce the gap to 10px */
+}
+.logo {
+  margin-center: 10px; /* reduce the margin to 10px */
+}
+
+.artist-statement {
+    flex: 1;
+    text-align: right;
   
 }
 
+.artist-statement {
+  text-align: right;
+  text-align:justify to the right;
+
+}
+.artist-statement {
+ justify-content: flex-end;
+ margin-left: auto;
+}
+.header-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.artist-statement {
+  margin-right: -20px; /* bring the elements 10px closer */
+}
+.list {
+  justify-content: right;
+  
+}
