--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
 body {
   color: #003049;
   font-family: "Source Sans Pro", Tahoma, Geneva, Verdana, sans-serif;
-  padding: 10px;
+  padding: 0px;
+  margin: 0px;
 }
 body {
   background-color: #eae2b7;
