--- a/style.css
+++ b/style.css
@@ -108,11 +108,7 @@ footer {
   text-align: center;
 
 }
-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between
-}
+
 
 .logo {
   margin-center: 10px; /* add some space between logo and nav */
@@ -123,6 +119,9 @@ nav {
 }
 header {
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+   display: flex;
   gap: 0px; /* reduce the gap to 10px */
 }
 .logo {
