--- a/style.css
+++ b/style.css
@@ -120,9 +120,9 @@ nav {
 header {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-   display: flex;
-  gap: 0px; /* reduce the gap to 10px */
+  justify-content: center;
+   gap: 20px; /* reduce the gap to 10px */
+   background-color: #eae2b7;
 }
 .logo {
   margin-center: 10px; /* reduce the margin to 10px */
