--- a/style.css
+++ b/style.css
@@ -123,6 +123,7 @@ header {
   justify-content: center;
    gap: 20px; /* reduce the gap to 10px */
    background-color: #eae2b7;
+  padding: 10px20px;
 }
 .logo {
   margin-center: 10px; /* reduce the margin to 10px */
