--- a/style.css
+++ b/style.css
@@ -26,6 +26,11 @@ h3 {
 }
 h1 {
   text-align: center;
+  margin: 0;
+  padding: 10px 20px;
+  text-family: Playfair Display;
+  font-size:1.5em;
+  white-space: nowrap
 }
 h2 {
   text-align: center;
@@ -123,11 +128,7 @@ header {
   justify-content: center;
    gap: 20px; /* reduce the gap to 10px */
    background-color: #eae2b7;
-  padding: 10px 20px;
-  text-family: Playfair Display;
-  font-size:1.5em;
-  white-space: nowrap
-}
+  }
 .logo {
   margin-center: 10px; /* reduce the margin to 10px */
 }
