--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ h2,
 h3 {
   font-family: "Playfair Display", Times, serif;
 }
-h1 {
+header h1 {
   text-align: center;
   margin: 0;
   padding: 10px 20px;
