--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ header h1 {
   font-size:1.5em;
   white-space: nowrap
 }
- h2 {
+header h2 {
  text-align: center;
   margin: 0;
   padding: 10px 20px;
