--- a/style.css
+++ b/style.css
@@ -39,13 +39,9 @@ header h1 {
   font-size:1.5em;
   white-space: nowrap
 }
-header h2 {
+ h2 {
  text-align: center;
-  margin: 0;
-  padding: 10px 20px;
-  text-family: Playfair Display;
-  font-size:1.5em;
-  white-space: nowrap
+ 
 }
  h3 {
  text-align: right;
