--- a/style.css
+++ b/style.css
@@ -65,7 +65,11 @@ h3.class-item {
 a:link {
   color: red;
 }
-
+.center-align {
+text-align: center;
+margin: 0 auto;
+width: 80%; /* Optional: adjust width to control the line length */
+}
 
 article {
   padding: 20px 0;
