--- a/style.css
+++ b/style.css
@@ -66,8 +66,9 @@ a:link {
   color: red;
 }
 .center-align {
-text-align: center;
+text-align: justify;
 margin: 0 auto;
+line-height: 1.6 
 width: 80%; /* Optional: adjust width to control the line length */
 }
 
