--- a/style.css
+++ b/style.css
@@ -99,6 +99,10 @@ img {
 
 hr {
   border: 1px solid black;
+  margin: auto;
+  max-width: 600px;
+  width: fit-content;
+
 }
 
 /* Add your solution below */
