--- a/style.css
+++ b/style.css
@@ -111,11 +111,11 @@ hr {
 .Abstract Red { 
   flex: 1;
 }
-.Spiral Zany {
+.Spiral-Zany {
   
   flex: 2;
 }
-.Melted Rainbow {
+.Melted-Rainbow {
   flex: 3;
 }
 
