--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@ body {
 
 .container {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: row;
+  
 }
 header {
   display: flex;
