--- a/style.css
+++ b/style.css
@@ -18,6 +18,18 @@ body {
   flex-direction: row;
   
 }
+.Abstract Red {
+  flex: 1;
+  margin: 10px;
+}
+.Spiral-Zany {
+    flex: 1;
+  margin: 10px;
+}
+.Melted-Rainbow {
+    flex: 1;
+  margin: 10px;
+}
 header {
   display: flex;
   align-items: center;
